--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
     <!-- Wish Section -->
     <section id="wish-section" class="scene content-scene">
-        <div class="glass-card hidden-fade">
+        <div class="glass-card ">
             <h2 class="wish-heading">One Last Question for You 💙</h2>
             <p class="wish-subtext">Tell me what kind of gift you want… I promise I’ll buy it and give it to you
                 whenever we meet 🤍</p>
