--- a/index.html
+++ b/index.html
@@ -74,6 +74,31 @@
         </div>
         <p class="instruction-text" id="candle-instruction">Tap the candle to blow it out 💨</p>
     </section>
+    </section>
+
+    <!-- Playful Animated Divider (keeps vertical gap, mobile-first) -->
+    <section class="animated-divider" aria-hidden="true">
+        <div class="divider-sky">
+            <!-- Sparkles / stars -->
+            <span class="sparkle s1"></span>
+            <span class="sparkle s2"></span>
+            <span class="sparkle s3"></span>
+            <span class="sparkle s4"></span>
+            <span class="sparkle s5"></span>
+            <!-- Cute peeking mouse -->
+            <div class="mouse" role="img" aria-label="cute mouse peeking">
+                <div class="ear ear-left"></div>
+                <div class="ear ear-right"></div>
+                <div class="head">
+                    <div class="eye eye-left"></div>
+                    <div class="eye eye-right"></div>
+                    <div class="nose"></div>
+                </div>
+                <div class="body"></div>
+                <div class="tail"></div>
+            </div>
+        </div>
+    </section>
 
     <!-- Photo Memories Section -->
     <section id="memories-section" class="scene content-scene">
